--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <!-- head -->
   </head>
   <body>
-    <header class="header">
-      <!-- nav -->
+    <!-- <header class="header">
+      
       <div class="container">
         <nav class="container__nav">
-          <!-- logo -->
+          
           <a href="index.html" class="logo link">
             <span class="logo__part--blue">Web</span>
             <span class="logo__part--black">Studio</span>
@@ -56,16 +56,16 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
 
     <!-- hero -->
-    <main class="main-content">
+    <!-- <main class="main-content">
       <section class="hero">
         <div class="container">
           <h1 class="hero-head">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="btn-hero" data-modal-open>Заказать услугу</button>
         </div>
-      </section>
+      </section> -->
 
       <!-- наши ценности -->
 
@@ -363,7 +363,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="foot-block footer__foot-block">
           <div class="soc-block-addres">
@@ -434,7 +434,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
