--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header class="header">
-      <!-- nav -->
+    <!-- <header class="header">
+     
       <div class="container">
         <nav class="container__nav">
           <a href="index.html" class="logo link">
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- buttons -->
       <section class="porfolio">
@@ -301,10 +301,9 @@
           </div>
 
           <form class="foot-form foot-block__foot-form">
-            <div>
-              <p class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></p>
-              <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
-            </div>
+            <p class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></p>
+            <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
+
             <div class="wrap-batton foot-form__wrap-batton">
               <button type="submit" class="foot-form__button">
                 Подписатся
