--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
     </main>
 
     <!-- footer -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="foot-block footer__foot-block">
           <div class="soc-block-addres">
@@ -417,12 +417,10 @@
               </li>
             </ul>
           </div>
-
-          <form class="foot-form foot-block__foot-form">
-            <div>
-              <p class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></p>
-              <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
-            </div>
+       
+          <b class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></b>
+<form class="foot-form foot-block__foot-form">
+          <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
             <div class="wrap-batton foot-form__wrap-batton">
               <button type="submit" class="foot-form__button">
                 Подписатся
@@ -434,7 +432,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal -->
     <div class="backdrop is-hidden" data-modal>
