Fixing modal button

--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
     </header> -->
 
     <!-- hero -->
-    <!-- <main class="main-content">
+    <main class="main-content">
       <section class="hero">
         <div class="container">
-          <h1 class="hero-head">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn-hero" data-modal-open>Заказать услугу</button>
+          <div class="hero-content">
+            <h1 class="hero-head">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="btn-hero" data-modal-open>Заказать услугу</button>
+          </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- наши ценности -->
 
@@ -417,17 +419,19 @@
               </li>
             </ul>
           </div>
-       
-          <b class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></b>
-<form class="foot-form foot-block__foot-form">
-          <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
-            <div class="wrap-batton foot-form__wrap-batton">
-              <button type="submit" class="foot-form__button">
-                Подписатся
-                <svg class="foot-form__svg" width="24" height="24">
-                  <use href="./img/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
+
+          <form class="foot-form foot-block__foot-form">
+            <b class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></b>
+            <div class="form-wrapper">
+              <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
+              <div class="wrap-batton foot-form__wrap-batton">
+                <button type="submit" class="foot-form__button">
+                  Подписатся
+                  <svg class="foot-form__svg" width="24" height="24">
+                    <use href="./img/icons.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
           </form>
         </div>
