--- a/portfolio.html
+++ b/portfolio.html
@@ -301,16 +301,17 @@
           </div>
 
           <form class="foot-form foot-block__foot-form">
-            <p class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></p>
-            <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
-
-            <div class="wrap-batton foot-form__wrap-batton">
-              <button type="submit" class="foot-form__button">
-                Подписатся
-                <svg class="foot-form__svg" width="24" height="24">
-                  <use href="./img/icons.svg#icon-icon-send"></use>
-                </svg>
-              </button>
+            <b class="foot-form__label"><strong>ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong></b>
+            <div class="form-wrapper">
+              <input class="foot-form__input" type="email" name="mail" placeholder="E-mail" />
+              <div class="wrap-batton foot-form__wrap-batton">
+                <button type="submit" class="foot-form__button">
+                  Подписатся
+                  <svg class="foot-form__svg" width="24" height="24">
+                    <use href="./img/icons.svg#icon-icon-send"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
           </form>
         </div>
