--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
     <!-- head -->
   </head>
   <body>
-    <!-- <header class="header">
-      
+    <header class="header">
       <div class="container">
         <nav class="container__nav">
-          
           <a href="index.html" class="logo link">
             <span class="logo__part--blue">Web</span>
             <span class="logo__part--black">Studio</span>
@@ -55,8 +53,52 @@
             >
           </li>
         </ul>
+        <button class="menu-open" type="button">
+          <svg class="menu-svd" width="40" height="40">
+            <use href="./img/menu-but.svg#icon-menu_40px"></use>
+          </svg>
+        </button>
+        <div class="mob-menu">
+          <div class="mob-cotainer">
+            <div><button class="menu-close" type="button">
+            <svg class="menu-svd" width="40" height="40">
+              <use href="./img/mod-svg.svg#icon-close_40px"></use>
+            </svg>
+          </button>
+          <ul class="mob-navigations list">
+            <li class="mob-navigations-item">
+              <a href="" class="mob-navigations-link current link">Студия</a>
+            </li>
+            <li class="mob-navigations-item">
+              <a href="./portfolio.html" class="mob-navigations-link link">Портфолио</a>
+            </li>
+            <li class="mob-navigations-item"><a href="" class="mob-navigations-link link">Контакты</a></li>
+          </ul>
+        </nav></div>
+            <div><ul class="mob-contacts list">
+           <li class="mob-contacts-item">
+            <a href="tel:+380961111111" class="mob-contacts-tel link"
+              >+38 096 111 11 11</a>
+          </li>
+          <li class="mob-contacts-item">
+            <a href="mailto" class="mob-contacts-link link">
+              info@devstudio.com</a>
+          </li>
+        </ul>
+       <ul class="mob-soc-list">
+        <li class="mob-soc-item list"><a href="mailto" class="mob-soc-link link">
+              Instagram</a></li>
+        <li class="mob-soc-item list"><a href="mailto" class="mob-soc-link link">
+              Twitter</a></li>
+        <li class="mob-soc-item list"><a href="mailto" class="mob-soc-link link">
+              Facebook</a></li>
+        <li class="mob-soc-item list"><a href="mailto" class="mob-soc-link link">
+              LinkedIn</a></li>
+       </ul></div>
+          </div>
+        </div>
       </div>
-    </header> -->
+    </header>
 
     <!-- hero -->
     <main class="main-content">
@@ -495,5 +537,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
