--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
             <li class="wedo-item">
               <picture>
                 <source
-                  srcset="../img/wedo2.jpg 1x, ../img/wedo2-dtx2.jpg 2x"
+                  srcset="./img/wedo2.jpg 1x, ./img/wedo2-dtx2.jpg 2x"
                   media="min-with:1200px"
                 />
-                <img src="../img/wedo2.jpg" alt="Разрабатываем дизайн" />
+                <img src="./img/wedo2.jpg" alt="Разрабатываем дизайн" />
               </picture>
 
               <div class="over-block">
