--- a/index.html
+++ b/index.html
@@ -186,11 +186,8 @@
             </li>
             <li class="wedo-item">
               <picture>
-                <source
-                  srcset="./img/wedo2.jpg 1x, ./img/wedo2-dtx2.jpg 2x"
-                  media="min-with:1200px"
-                />
-                <img src="./img/wedo2.jpg" alt="Разрабатываем дизайн" />
+                <source srcset="img/wedo2.jpg 1x, img/wedo2-dtx2.jpg 2x" media="min-with: 1200px" />
+                <img src="img/wedo2.jpg" alt="Разрабатываем дизайн" />
               </picture>
 
               <div class="over-block">
@@ -214,12 +211,22 @@
           <h2 class="team-set__title team-set__title--font">Наша команда</h2>
           <ul class="team-list team-set__team-list list">
             <li class="team-item team-set__team-item team-set__team-item--color">
-              <img
-                src="./img/tem1.jpg"
-                class="team-item__image"
-                alt="Игорь Демьяненко"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="./img/Team1-mob-1x.jpg 1x, ./img/Team1-mob-2x.jpg 2x"
+                  media="max-with: 768px"
+                />
+                <source
+                  srcset="./img/Team1-tab-1x.jpg, ./img/Team1-tab-2x.jpg 2x"
+                  media="min-with: 768px"
+                />
+                <source
+                  srcset="./img/Team1-dt-1x.jpg, ./img/Team1-dt-2x.jpg 2x"
+                  media="min-with: 1200px"
+                />
+                <img src="./img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
+              </picture>
+
               <h2 class="team-set__pd">Игорь Демьяненко</h2>
               <p class="team-set__pd-title">Product Designer</p>
               <ul class="soc-list team-set__soc-list list">
