--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <h2 class="wedo-title">Чем мы занимаемся</h2>
           <ul class="wedo-list list">
             <li class="wedo-item">
-              <img src="img/wedo1.jpg" alt="Строим схемы" width="370" />
+              <img src="./img/wedo1.jpg" alt="Строим схемы" width="370" />
               <div class="over-block">
                 <h3 class="over-block-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
               </div>
@@ -216,18 +216,18 @@
             <li class="team-item team-set__team-item team-set__team-item--color">
               <picture>
                 <source
-                  srcset="./img/Team1-mob-1x.jpg 1x, ./img/Team1-mob-2x.jpg 2x"
+                  srcset="/img/Team1-mob-1x.jpg 1x, ./img/Team1-mob-2x.jpg 2x"
                   media="(max-with: 768px)"
                 />
                 <source
-                  srcset="./img/Team1-tab-1x.jpg, ./img/Team1-tab-2x.jpg 2x"
+                  srcset="/img/Team1-tab-1x.jpg, ./img/Team1-tab-2x.jpg 2x"
                   media="(min-with: 768px)"
                 />
                 <source
-                  srcset="./img/Team1-dt-1x.jpg, /img/Team1-dt-2x.jpg 2x"
+                  srcset="/img/Team1-dt-1x.jpg, /img/Team1-dt-2x.jpg 2x"
                   media="(min-with: 1200px)"
                 />
-                <img src="./img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
+                <img src="/img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
               </picture>
 
               <h2 class="team-set__pd">Игорь Демьяненко</h2>
