--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
             <li class="wedo-item">
               <picture>
                 <source
-                  srcset="img/wedo2.jpg 1x, img/wedo2-dtx2.jpg 2x"
+                  srcset="./img/wedo2-dtx2.jpg 1x, ./img/wedo2-dtx2.jpg 2x"
                   media="(min-with: 1200px)"
                 />
-                <img src="img/wedo2.jpg" alt="Разрабатываем дизайн" />
+                <img src="./img/wedo2.jpg" alt="Разрабатываем дизайн" />
               </picture>
 
               <div class="over-block">
@@ -216,15 +216,15 @@
             <li class="team-item team-set__team-item team-set__team-item--color">
               <picture>
                 <source
-                  srcset="/img/Team1-mob-1x.jpg 1x, ./img/Team1-mob-2x.jpg 2x"
+                  srcset="./img/team1-mob-1x.jpg 1x, ./img/team1-mob-2x.jpg 2x"
                   media="(max-with: 768px)"
                 />
                 <source
-                  srcset="/img/Team1-tab-1x.jpg, ./img/Team1-tab-2x.jpg 2x"
+                  srcset="./img/team1-tab-1x.jpg 1x, ./img/team1-tab-1x.jpg 2x"
                   media="(min-with: 768px)"
                 />
                 <source
-                  srcset="/img/Team1-dt-1x.jpg, /img/Team1-dt-2x.jpg 2x"
+                  srcset="./img/team1-dt-1x.jpg 1x, ./img/team1-dt-1x.jpg 2x"
                   media="(min-with: 1200px)"
                 />
                 <img src="/img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
