--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   srcset="./img/team1-dt-1x.jpg 1x, ./img/team1-dt-1x.jpg 2x"
                   media="(min-with: 1200px)"
                 />
-                <img src="/img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
+                <img src="./img/tem1.jpg" class="team-item__image" alt="Игорь Демьяненко" />
               </picture>
 
               <h2 class="team-set__pd">Игорь Демьяненко</h2>
