--- a/portfolio.html
+++ b/portfolio.html
@@ -128,7 +128,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img1.jpg" alt="Технокряк" width="370" />
+                  <picture>
+                    <source
+                      srcset="./img/img1-mob-1x.jpg 1x, ./img/img1-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img1-tab-1x.jpg 1x, ./img/img1-tab-2x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img1-dt-1x.jpg 1x, ./img/img1-dt-2x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img1.jpg" alt="Технокряк" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -147,7 +162,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+                  <picture>
+                    <source
+                      srcset="./img/img2-mob-1x.jpg 1x, ./img/img2-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img2-tab-1x.jpg 1x, ./img/img2-tab-2x.jpg2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img2-dt-1x.jpg 1x, ./img/img2-dt-2x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -165,7 +195,23 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img3.jpg" alt="Ресторан Seafood" width="370" />
+                  <picture>
+                    <source
+                      srcset="./img/img3-mob-1x.jpg 1x, ./img/img3-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img3-tab-1x.jpg 1x, 
+                    ./img/img3-tab-1x.jpg 2x 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img3-dt-1x.jpg 1x, ./img/img3-dt-2x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img3.jpg" alt="Ресторан Seafood" width="370" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -183,7 +229,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img4.jpg" alt="Проект Prime" width="370" />
+                  <picture>
+                    <source
+                      srcset="./img/img4-mob-1x.jpg 1x, ./img/img4-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img4-tab-1x.jpg 1x, ./img/img4-tab-2x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img4-dt-1x.jpg 1x, ./img/img4-dt-1x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img4.jpg" alt="Проект Prime" width="370" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -201,7 +262,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img5.jpg" alt="Проект Boxes" width="370" />
+                  <picture>
+                    <source
+                      srcset="/img/img5-mob-1x.jpg 1x, /img/img5-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img5-tab-1x.jpg 1x, ./img/img5-tab-2x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img5-dt-1x.jpg 1x, ./img/img5-dt-2x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img5.jpg" alt="Проект Boxes" width="370" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -219,7 +295,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img6.jpg" alt="" width="370" />
+                  <picture>
+                    <source
+                      srcset="./img/img6-mob-1x.jpg 1x, ./img/img6-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img6-tab-1x.jpg 1x, ./img/img6-tab-1x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img6-dt-1x.jpg 1x, ./img/img6-dt-1x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img6.jpg" alt="" width="370" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -237,7 +328,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img7.jpg" alt="Издание Limited Edition" />
+                  <picture>
+                    <source
+                      srcset="./img/img7-mob-1x.jpg 1x, ./img/img7-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img7-tab-1x.jpg 1x, ./img/img7-tab-2x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img7-dt-1x.jpg 1x, ./img/img7-dt-1x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img7.jpg" alt="Издание Limited Edition" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -255,7 +361,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img8.jpg" alt="Проект LAB" />
+                  <picture>
+                    <source
+                      srcset="./img/img8-mob-1x.jpg 1x, ./img/img8-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img8-tab-1x.jpg 1x, ./img/img8-tab-1x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img8-dt-1x.jpg 1x, ./img/img8-dt-1x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img8.jpg" alt="Проект LAB" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -273,7 +394,22 @@
             <li class="work-item">
               <a href="" class="imgp link">
                 <div class="over">
-                  <img src="./img/img9.jpg" alt="Growing Business" />
+                  <picture>
+                    <source
+                      srcset="./img/img9-mob-1x.jpg 1x, ./img/img9-mob-2x.jpg 2x"
+                      media="(max-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img9-tab-1x.jpg 1x, ./img/img9-tab-2x.jpg 2x"
+                      media="(min-with: 768px)"
+                    />
+                    <source
+                      srcset="./img/img9-dt-1x.jpg 1x, ./img/img9-dt-1x.jpg 2x"
+                      media="(min-with: 1200px)"
+                    />
+                    <img src="./img/img9.jpg" alt="Growing Business" />
+                  </picture>
+
                   <div class="over-text">
                     <span
                       >Ресурс предлагает комплексные предложения с разным уровнем функционала и
